# agentic-brain

./: .mcp.json  CLAUDE.md  coder.agent.project.md
.claude/: settings.local.json
.claude/agents/: architect.md
.claude/rules/: brain-fat-index-discipline.md  brain.md
amp/: PROTOCOL.md  ROSTER.md  check-inbox.py
amp/agents/alpha/: 001.md
coder-brain/project-brain/: INDEX-MASTER.md
project-brain/: .content-hashes.json  =0.2.2  INDEX-MASTER.md  INIT.md  SESSION-HANDOFF.md  brain-mcp-server.py  brain.py  pyproject.toml
project-brain/indexes/: INDEX-claude-code.md
project-brain/learnings/: LEARN-009_claude-code-subagents-system.md  LEARN-010_claude-code-architecture-internals.md  LEARN-017_claude-code-costs-settings-environment.md  LEARN-019_claude-code-brain-integration-layers-1-3.md  LEARN-031_file-based-knowledge-management-at-scale.md  LEARN-032_quorum-sensing-framework-for-knowledge-management.md  LEARN-033_brain-graph-topology-first-backlink-analysis.md  LEARN-034_knowledge-capture-gap-and-chat-log-review-pattern.md  LEARN-037_sandbox-agent-sdk-remote-coding-agent-execution.md  LEARN-041_mcp-server-development-gotchas.md  LEARN-044_brain-as-context-multiplier-not-rag.md  LEARN-047_visual-ipc-cdp-inter-agent-communication.md  LEARN-053_mcp-agent-mail-wsl-deployment.md
project-brain/logs/: LOG-002_project-timeline.md
project-brain/rules/: RULE-002_context-and-session-management.md
project-brain/specs/: SPEC-001_prover-multi-brain-architecture.md  SPEC-003_quorum-capable-brain-implementation-plan.md  SPEC-005_brain-v2-architecture.md
(+1 files in other folders)
