[project]
name = "project-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf4llm>=0.3.4",
    "rank-bm25>=0.2.2",
]

[project.scripts]
brain = "brain_search:main"

[tool.setuptools]
py-modules = ["brain_search"]
